# ethansocal

./: CNAME  README.md  index.html  pyproject.toml  test.py
.github/workflows/: liccheck.yml  license-checker.yaml  license-checker.yml  lint.yml  pytest.yml  thing.yml
tests/: test_system.py
thing/: __init__.py
wtpython/: __init__.py
