[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "test"
description = "Find errors in your code, and automatically find the solution them."
readme = "README.md"
requires-python=">=3.7"
license = "LICENSE"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires=[
    "parse == 1.19.0",
    "requests == 2.25.1",
    "textual == 0.1.9",
    "toml == 0.10.2",
    "rich == 10.7.0",
    "pyperclip == 1.8.2",
    "requests-cache == 0.7.1",
    "markdownify == 0.9.2"
]
dynamic = ['version']

[project.optional-dependencies]
test = [
    "flake8~=3.7",
    "flake8-annotations~=2.0",
    "flake8-bandit~=2.1",
    "flake8-docstrings~=1.5",
    "flake8-isort~=4.0",
    "isort~=5.9",
    "pytest >= 6.2.4",
    "pytest-cov >= 2.12.1",
    "pytest-datadir >= 1.3.1",
    "pytest-randomly >= 3.8.0",
]
dev = [
    "pre-commit >= 2.13.0",
]

