[tool.poetry]
name = "thing"
version = "0.1.0"
description = "A thing."
authors = ["Ethan Henry <ethanparkerhenry@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"  # Poetry's dependency resolver requires me to put the <4.0 part for some reason
parse = "1.19.0"
requests = "2.25.1"
textual = "0.1.10"
toml = "0.10.2"
rich = "10.7.0"
pyperclip = "1.8.2"
requests-cache = "0.7.1"
markdownify = "0.9.2"

[tool.poetry.dev-dependencies]
flake8 = "~=3.7"
flake8-annotations = "~=2.0"
flake8-bandit = "~=2.1"
flake8-docstrings = "~=1.5"
flake8-isort = "~=4.0"
isort = "~=5.9"
pytest  = ">=6.2.4"
pytest-cov  = ">=2.12.1"
pytest-datadir  = ">=1.3.1"
pytest-randomly  = ">=3.8.0"
pre-commit  = ">=2.13.0"

# Install dev and test dependencies with the -e option of poetry install
[tool.poetry.extras]
test = [
    "flake8~=3.7",
    "flake8-annotations~=2.0",
    "flake8-bandit~=2.1",
    "flake8-docstrings~=1.5",
    "flake8-isort~=4.0",
    "isort~=5.9",
    "pytest >= 6.2.4",
    "pytest-cov >= 2.12.1",
    "pytest-datadir >= 1.3.1",
    "pytest-randomly >= 3.8.0",
]
dev = [
    "pre-commit >= 2.13.0",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
